<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="32"/>
        <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:maxLength="20"/>
        <EditText
                android:id="@+id/storeName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/storeName"
                android:inputType="text"
                android:maxLength="16"
                android:maxLines="1"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
            <EditText
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="6"
                    android:inputType="text"
                    android:hint="@string/provinces_city"
                    android:maxLines="1"
                    android:enabled="false"/>
            <EditText
                    android:id="@+id/addressDesc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="20"/>
        </LinearLayout>


        <EditText
                android:id="@+id/contacts"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/contacts"
                android:inputType="textPersonName"
                android:maxLength="5"
                android:maxLines="1"/>
        <EditText
                android:id="@+id/tell"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/cell"
                android:inputType="phone"
                android:maxLength="14"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
        <Button
                android:id="@+id/addPIC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="添加门店图片(必须)"/>
        <Button
                android:id="@+id/submitBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"/>

    </LinearLayout>
</ScrollView>