<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:background="@color/backgrund"
             android:baselineAligned="false"
             android:stretchColumns="0">

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:layout_gravity="center"
            android:background="@color/midground">

        <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60.0dip"
                        android:gravity="center"
                        android:text="@string/text_add_log"
                        android:textSize="@dimen/text_size"/>
            </LinearLayout>

            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="bottom|left|center">

                <Button
                        android:id="@id/returnB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_return"
                        android:textSize="@dimen/text_size"/>
                <Button
                        android:id="@+id/addBrand"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="品牌"
                        android:textSize="@dimen/text_size"/>
            </RelativeLayout>
        </FrameLayout>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="70.0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/col_art_brand"
                        android:textColor="#ff000000"
                        android:textSize="@dimen/text_size" android:id="@+id/textView4"/>

                <Spinner
                        android:id="@id/brandS"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="70.0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/col_art_name"
                        android:textColor="#ff000000"
                        android:textSize="@dimen/text_size"/>

                <EditText
                        android:id="@id/nameS"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="70.0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/col_art_color"
                        android:textColor="#ff000000"
                        android:textSize="@dimen/text_size"/>

                <Spinner
                        android:id="@id/colorS"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="70.0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/col_art_size"
                        android:textColor="#ff000000"
                        android:textSize="@dimen/text_size"/>

                <Spinner
                        android:id="@id/sizeS"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="70.0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/text_in_or_out"
                        android:textColor="#ff000000"
                        android:textSize="@dimen/text_size"/>

                <Spinner
                        android:id="@id/typeS"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="70.0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/text_count"
                        android:textColor="#ff000000"
                        android:textSize="@dimen/text_size"/>

                <EditText
                        android:id="@id/countEt"
                        android:layout_width="fill_parent"
                        android:layout_height="40.0dip"
                        android:layout_gravity="center"
                        android:inputType="number"
                        android:textSize="@dimen/text_size"/>
            </LinearLayout>
        </LinearLayout>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

            <ImageButton
                    android:id="@id/stockSave"
                    android:layout_width="fill_parent"
                    android:layout_height="64.0dip"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/save"/>
        </LinearLayout>
    </TableRow>
</TableLayout>